--- a/shogiteatime.yaml
+++ b/shogiteatime.yaml
@@ -1,18 +1,18 @@
 - module: RSS::load
   config:
     url: ['http://kifulog.shogi.or.jp/ryuou/rss.xml',
-          'http://mainichi.jp/enta/shougi/ohshoblog/rss.xml',
           'http://kifulog.shogi.or.jp/oui/rss.xml',
           'http://kifulog.shogi.or.jp/kisei/rss.xml',
           'http://kifulog.shogi.or.jp/ouza/rss.xml',
           'http://kifulog.shogi.or.jp/kiou/rss.xml',
           'http://mynavi-open.jp/weblog/atom.xml',
           'http://kifulog.shogi.or.jp/joryuoui/rss.xml',
+          'http://kifulog.shogi.or.jp/joryu_ouza/rss.xml',
           'http://kifulog.shogi.or.jp/joryumeijin/rss.xml']
 - module: Filter::grep
   config:
     attribute: title
-    regex: おやつ|目(昼食|夕食)
+    regex: おやつ|昼食|夕食
 - module: RSS::save
   config:
     filename: shogiteatime.rss
